<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".ui.scan.ScanFragment">

    <ImageView
        android:id="@+id/image_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:contentDescription="@string/image_scan"
        android:src="@drawable/scan_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/get_result"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:drawableStart="@drawable/ic_scan"
        android:drawableTint="@color/green_button"
        android:padding="10dp"
        android:background="@drawable/custom_button"
        android:text="@string/get_result"
        android:textSize="20sp"
        android:textColor="@color/base_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_scan" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ic_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/image_camera"
        android:src="@drawable/ic_camera"
        android:tint="@color/green_button"
        app:layout_constraintEnd_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/get_result" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/ic_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="32dp"
        android:background="@drawable/custom_button"
        android:contentDescription="@string/image_camera"
        android:src="@drawable/ic_gallery"
        android:tint="@color/green_button"
        app:layout_constraintStart_toStartOf="@id/guideline"
        app:layout_constraintTop_toBottomOf="@id/get_result" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>